--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/JAVASCRIPT/funcAssignment.html"
+    "livePreview.defaultPreviewPath": "/html_CSS/prac/index.html"
 }
